fixed list item alignment.

--- a/module3-solution/css/styles.css
+++ b/module3-solution/css/styles.css
@@ -49,9 +49,24 @@ h3{
     margin-bottom: 24px;
     align-content: center;
 }
+ul {
+    margin-bottom: 0px;
+    line-height: 1;
+}
 li {
     list-style-type: none;
+    padding: 5px;
 }
+
 hr {
     border-color: #181a16;
+    margin: 0px;
+}
+#collapsable-nav {
+    border-color: #181a16;
+    border-radius: 2px;
+    border-style: outset;
+    margin-top: -20px;
+    margin-left: -14px; 
+    margin-right: -14px; 
 }
